--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,6 @@
 html, body {
 	position: relative;
-	overscroll-behavior-y: contain;
+	/* overscroll-behavior-y: contain; */
 	width: 100%;
 	height: 100%;
 
